# os_p2

./: .gitignore  Cargo.toml  Dockerfile  Manual de Usuario.md  README.md  k8s-deployment.yaml
archivos/: DorianGray.txt  Metamorfosis.txt  Montecristo.txt  counttest.txt  cuentos_emilia_pardo_bazan.txt
src/: main.rs
src/client/: client.rs
src/distributed/: count_partial.rs  count_total.rs  matrix_partial.rs  matrix_total.rs  mod.rs
src/errors/: implement.rs  matrix.rs  mod.rs  parse.rs  pool.rs  server.rs  slaves.rs
src/functions/: createfile.rs  deletefile.rs  fibonacci.rs  hash.rs  help.rs  mod.rs  random.rs  reverse.rs  simulate.rs  sleep.rs  timestamp.rs  toupper.rs  unit_tests.rs
src/models/: count.rs  matrix.rs  mod.rs  request.rs  response.rs  slave.rs  status.rs
src/pool/: mod.rs  status.rs  threadpool.rs
src/redis_comm/: connection.rs  count_store.rs  matrix_store.rs  mod.rs
src/server/: mod.rs  parser.rs  request.rs  response.rs  routes.rs  server.rs
src/server_base/: server.rs
src/server_master/: mod.rs  parser.rs  routes.rs  server.rs  slaves.rs
src/server_slave/: mod.rs  routes.rs
src/status/: mod.rs  status.rs
src/task/: handler.rs  mod.rs  queue.rs
