[package]
name = "os_p2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "=0.4.41"
gettid = "0.1.3"
rand = "0.9.1"
sha256 = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.23"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.45.1", features = ["full"] }
parking_lot = "0.12.4"
indexmap = "2.9.0"
tokio-util = "0.7.15"
